--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "moment": "^2.14.1",
     "vue": "^1.0.21",
     "vue-router": "^0.7.13"
   },
